# collect

./: .env.example  .gitignore  API.md  Cargo.toml  README.md  USE.md
.claude/projects/-Users-xapi-code-poly-collect/memory/: MEMORY.md  feedback_ws_throttle.md
src/: config.rs  lib.rs  main.rs
src/api/: auth.rs  mod.rs  routes.rs  server.rs  ws_stream.rs
src/binance/: depth_ws.rs  mod.rs  trade_ws.rs
src/calculation/: engine.rs  fair_value.rs  mod.rs
src/gamma/: client.rs
src/orchestrator/: process.rs  scheduler.rs
src/polymarket/: collector.rs
src/storage/: writer.rs
src/types/: binance.rs  gamma.rs  mod.rs  polymarket.rs
src/ws/: connection.rs
tests/: research.rs  serde_roundtrip.rs
